--- a/interfaz/package.json
+++ b/interfaz/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "express-fileupload": "^1.0.0"
+    "express-fileupload": "^1.0.0",
+    "pug": "^2.0.3"
   }
 }
